--- a/庄园.html
+++ b/庄园.html
@@ -19,10 +19,12 @@
     <link rel="stylesheet" href="./assets/vendor/qaq/css/qaq.css">
     <link rel="stylesheet" href="./assets/css/app.css" /> 
     <script src="./assets/vendor/jquery/1.11.1/jquery.min.js"></script> 
+    <script src="./assets/vendor/qaq/js/qaq.js"></script>
     <script src="./assets/js/app.config.js"></script>
     <script src="./assets/js/app.global.js"></script>
  </head> 
  <body class="yc yc-home-container"> 
+
     <!-- 顶部导航 -->
     <div class="yc-topnav" > 
         <div class="yc-wrapper ">
@@ -269,7 +271,7 @@
                     </div>
                     <div class="garden-info">
                         <span class="garden-date">12月8日 19:30:27</span>
-                        <a href="javascript:;" class="yc-btn garden-btn-share">
+                        <a href="javascript:;" class="yc-btn garden-btn-share" data-role="share">
                             <i class="icon-share"></i>分享
                         </a>
                     </div>
@@ -285,7 +287,7 @@
                     </div>
                     <div class="garden-info">
                         <span class="garden-date">12月8日 19:30:27</span>
-                        <a href="javascript:;" class="yc-btn garden-btn-share">
+                        <a href="javascript:;" class="yc-btn garden-btn-share" data-role="share">
                             <i class="icon-share"></i>分享
                         </a>
                     </div>
@@ -301,7 +303,7 @@
                     </div>
                     <div class="garden-info">
                         <span class="garden-date">12月8日 19:30:27</span>
-                        <a href="javascript:;" class="yc-btn garden-btn-share">
+                        <a href="javascript:;" class="yc-btn garden-btn-share" data-role="share">
                             <i class="icon-share"></i>分享
                         </a>
                     </div>
@@ -443,6 +445,6 @@
 
     </div>
 
-
+    
   </body>
 </html>
