不小心改了文件

--- a/庄园.html
+++ b/庄园.html
@@ -13,8 +13,8 @@
     <meta name="description" content="哟菜青年">
     <meta name="keywords" content="哟菜青年">
     <title>哟菜青年</title> 
-    <link rel="shortcut icon" href="./assets/images/footer-logo.jpg" /> 
-    <link rel="icon" href="./assets/images/footer-logo.jpg" />
+    <link rel="shortcut icon" href="./assets/images/icon.jpg" /> 
+    <link rel="icon" href="./assets/images/icon.jpg" />
     <link rel="stylesheet" href="./assets/css/app.public.css">
     <link rel="stylesheet" href="./assets/vendor/qaq/css/qaq.css">
     <link rel="stylesheet" href="./assets/css/app.css" /> 
@@ -62,7 +62,7 @@
     </div>
     
     <!-- 主体 -->
-    <div class="yc-main yc-wrapper clearfix">
+    <div class="yc-main yc-main-home yc-wrapper clearfix">
         <!-- 左侧导航 -->
         <div class="yc-leftsidebar">
             <div class="yc-module yc-leftsidebar-userinfo">
